[package]
name = "rosa-parse"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/oknozor/rosa-parse"
description = "Rosa parse is a command line utility to convert json, yaml or toml from stdin to json, yaml or toml to stdout."


[dependencies]
toml = "^0"
serde = "^1"
serde_yaml = "^0"
serde_json = "^1"
anyhow = "^1"

[[bin]]
name = "to-toml"
path = "src/bin/to-toml.rs"

[[bin]]
name = "to-yaml"
path = "src/bin/to-yaml.rs"

[[bin]]
name = "to-json"
path = "src/bin/to-json.rs"


